<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>test_chained_diff_drive_controller</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="thibault.poignonec@gmail.com">tpoignonec</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ros2_control_demo_example_2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
